--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -1078,6 +1078,12 @@
       "object": "Dirección IP",
       "plural": "Direcciones IP"
     },
+    "blacklist": {
+      "object": "Lista negra"
+    },
+    "tenantIpAddress": {
+      "plural": "Direcciones IP"
+    },
     "role": {
       "object": "Rol",
       "plural": "Roles",
