--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -1074,6 +1074,12 @@
       "object": "IP Address",
       "plural": "IP Addresses"
     },
+    "blacklist": {
+      "object": "Blacklist"
+    },
+    "tenantIpAddress": {
+      "plural": "IP Addresses"
+    },
     "role": {
       "object": "Role",
       "plural": "Roles",
