--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -365,7 +365,7 @@
       "topText": "Next.js + Prisma + Postgres",
       "cta1": "Empieza ahora",
       "cta2": "Contáctanos",
-      "headline1": "Desarrolla tu SaaS en Remix (React Router 7)",
+      "headline1": "Desarrolla tu SaaS en NextJS 15 (App Router)",
       "headline2": "Desarrolla tu SaaS con +25 funciones SaaS integradas: Portal de Administración, Portal de Aplicación, Suscripciones & Pagos, Blog, Page Block Builder, Bases de Conocimiento, Eventos & Workflows, Analíticas, Entity Builder (auto-generated CRUD and API), CRM & Marketing por Correo Electrónico, Notificaciones, Onboarding, Feature Flags, Caché y Métricas.",
       "headline3": "",
       "subheadline1": "Construye → Publicita → Administra tu SaaS",
@@ -1538,7 +1538,7 @@
   },
   "blog": {
     "title": "Blog",
-    "headline": "Lee las últimas noticias de la plantilla para aplicaciones SaaS con Remix.",
+    "headline": "Lee las últimas noticias de la plantilla para aplicaciones SaaS con NextJS 15.",
     "published": "Publicado",
     "draft": "Borrador",
     "thisIsADraft": "Este es un borrador",
