--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -423,15 +423,15 @@
     },
     "roadmap": {
       "title": "Roadmap",
-      "headline": "Learn more about TheRock's current status."
+      "headline": "Learn more about NextRock's current status."
     },
     "faq": {
       "title": "Frequently Asked Questions",
       "headline": "Add your own questions and answers to help your users understand your SaaS.",
-      "subheadline": "Common questions and answers about TheRock.",
+      "subheadline": "Common questions and answers about NextRock.",
       "questions": {
         "q1": "How do I get the code after purchasing?",
-        "a1": "You will be invited to the TheRock repository on GitHub. If you bought TheRock Pro you will also be invited to the TheRock-pro repository.",
+        "a1": "You will be invited to the NextRock repository on GitHub. If you bought NextRock Pro you will also be invited to the NextRock-pro repository.",
         "q2": "Can I get a refund?",
         "a2": "Due to the nature of software development being a custom service, we do not offer refunds."
       }
