--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -370,7 +370,7 @@
       "headline2": "Launch production-ready SaaS apps with +25 built-in features, such as: Admin dashboard, App portal, Stripe, Blog, Page Builder, Knowledge Base, Workflows, Analytics, Entity Builder, Email Marketing, Notifications, Onboarding, Feature Flags, Cache and Metrics.",
       "headline3": "",
       "subheadline1": "Build → Market → Manage your SaaS",
-      "hint": "This site uses {{0}} Pro Edition",
+      "hint": "This site uses {{0}} NextRock Pro Edition",
       "buy": "Get started",
       "features": "Features",
       "docs": "Documentation",
