--- a/src/i18n/locales/es/translations.json
+++ b/src/i18n/locales/es/translations.json
@@ -369,14 +369,14 @@
       "headline2": "Desarrolla tu SaaS con +25 funciones SaaS integradas: Portal de Administración, Portal de Aplicación, Suscripciones & Pagos, Blog, Page Block Builder, Bases de Conocimiento, Eventos & Workflows, Analíticas, Entity Builder (auto-generated CRUD and API), CRM & Marketing por Correo Electrónico, Notificaciones, Onboarding, Feature Flags, Caché y Métricas.",
       "headline3": "",
       "subheadline1": "Construye → Publicita → Administra tu SaaS",
-      "hint": "Este sitio usa {{0}} Edición Pro",
+      "hint": "Este sitio usa {{0}} NextRock Edición Pro",
       "buy": "Empieza ahora",
       "features": "Funcionalidades",
       "docs": "Documentación",
       "components": "Componentes",
       "blog": "Blog",
       "contact": "Contáctanos",
-      "startHint": "Este demo está alojado en Vercel + Supabase.",
+      "startHint": "Este demo está alojado en Hetzner + Supabase.",
       "cta": "Empieza ahora",
       "changelog": "Changelog"
     },
